Make unlisted articles not visible and fix some UI bugs

--- a/portfolio-site/resources/public/css/site.css
+++ b/portfolio-site/resources/public/css/site.css
@@ -588,6 +588,14 @@ video {
   justify-content: center;
 }
 
+.overflow-clip {
+  overflow: clip;
+}
+
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
